# stock_pymes_rs

./: .dockerignore  .env  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/workflows/: ci.yml
config/: develop.yaml
img/: diag.puml
src/: main.rs
src/config/: config.rs
src/db/: mod.rs  query.rs
src/dto/: mod.rs  operation.rs
src/handlers/: client.rs  mod.rs  operation.rs  product.rs  sale.rs
src/request/: client_filter.rs  mod.rs  update_filters.rs
src/routes/: mod.rs
src/secret/: mod.rs
src/usecase/: mod.rs  month_operation.rs  operation_dispatch.rs
src/utils/: env.rs  mod.rs  query.rs
