[package]
name = "stock_pymes_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
actix-web = "4.0.1"
mysql = "22.1.0"
mysql_common = { version = "0.28.2", features = ["chrono"] }
yaml-rust = "0.4.5"
env_logger = "0.9.0"